[package]
name = "with"
version = "0.0.0"
edition = "2021"
authors = ["m1m1sha"]

[dependencies]
serde = { workspace = true, features = ["derive"] }


[workspace]
members = ["crates/packet", "crates/stun", "crates/tun", "crates/utils"]

[workspace.dependencies]
packet = { path = "crates/packet" }
tun = { path = "crates/tun" }
stun = { path = "crates/stun" }
utils = { path = "crates/utils" }
winreg = "^0.52"
windows = "^0.54"
libloading = "^0.8"
byteorder = "^1"
tracing = "^0.1"
tracing-subscriber = "^0.3"
tokio = "^1"
encoding = "^0.2"
serde = "^1"
parking_lot = "^0.12"
stun-format = "^1"
tokio-test = "^0.4"
crossbeam-utils = "^0.8"
crossbeam-epoch = "^0.9"

[build-dependencies]
prost-build = "^0.12"
