[package]
name = "with"
version = "0.0.0"
edition = "2021"
authors = ["m1m1sha"]

[dependencies]
nat = { workspace = true }
utils = { workspace = true }
protocol = { workspace = true }
cipher = { workspace = true }
prost = { workspace = true }
tracing = { workspace = true }
crossbeam-utils = { workspace = true }
packet = { workspace = true }
parking_lot = { workspace = true }
socket2 = { workspace = true }
bytes = { workspace = true }
rand = { workspace = true }
rsa = { workspace = true }
mio = { workspace = true, features = ["os-poll", "net"] }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }


[workspace]
members = [
    "crates/cipher",
    "crates/nat",
    "crates/packet",
    "crates/protocol",
    "crates/utils",
    "crates/libsm",
]

[workspace.dependencies]
packet = { path = "crates/packet" }
nat = { path = "crates/nat" }
utils = { path = "crates/utils" }
protocol = { path = "crates/protocol" }
cipher = { path = "crates/cipher" }
libsm = { path = "crates/libsm" }

prost = "^0.12"
winreg = "^0.52"
windows = "^0"
libloading = "^0.8"
byteorder = "^1"
tracing = "^0"
tracing-subscriber = "^0"
tokio = "^1"
encoding = "^0.2"
serde = "^1"
parking_lot = "^0.12"
stun-format = "^1"
tokio-test = "^0.4"
crossbeam-utils = "^0.8"
crossbeam-epoch = "^0.9"
rand = "^0.8"
socket2 = "^0.5"
mio = "^0.8"
bytes = "^1"

#cipher
sha2 = "^0.10"
aes-gcm = "^0.10"
ring = "^0.17"
cbc = "^0.1"
ecb = "^0.1"
aes = "^0.8"
rsa = "^0.9"
spki = "^0.7"

#libsm
num-bigint = "^0.4"
num-traits = "^0.2"
num-integer = "^0.1"
yasna = "^0.5"
lazy_static = "^1"
getrandom = "^0.2"

[build-dependencies]
prost-build = "^0.12"
