[package]
name = "tun"
version = "0.0.0"
edition = "2021"

[dependencies]
tracing = { workspace = true }
utils = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
libloading = { workspace = true }
windows = { workspace = true, features = [
    "Win32_System_Diagnostics_Debug",
    "Win32_System_SystemServices",
    "Win32_Security_Cryptography",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_Networking_WinSock",
    "Win32_System_Threading",
    "Win32_System_Com",
    "Win32_Security",
    "Win32_Foundation",
    "Win32_System_Ioctl",
    "Win32_System_IO",
] }
winreg = { workspace = true }
